...
  const val SCROLL_CONTAINER = "dangerModePreferencesScrollContainer"
  const val ALERT_MODE_ITEM = "alertModeItem"
  const val INACTIVITY_DETECTION_ITEM = "inactivityDetectionItem"
  const val AUTOMATIC_SMS_ITEM = "automaticSmsItem"
  const val AUTOMATIC_CALLS_ITEM = "automaticCallsItem"
  const val VOICE_CONFIRMATION_ITEM = "voiceConfirmationItem"
  const val ALERT_MODE_SWITCH = "alertModeSwitch"
  const val INACTIVITY_DETECTION_SWITCH = "inactivitySwitch"
  const val AUTOMATIC_SMS_SWITCH = "automaticSmsSwitch"
  const val AUTOMATIC_CALLS_SWITCH = "automaticCallsSwitch"
  const val VOICE_CONFIRMATION_SWITCH = "voiceConfirmationSwitch"
}

/**
...
