...
    <!-- communication screen-->
    <string name="communication_tts_speaking_label">Speaking…</string>
    <string name="communication_screen_title">Vocal communication</string>
    <string name="communication_listening_label">Listening…</string>
    <string name="communication_no_input_hint">We will show the transcript here.</string>
    <string name="communication_listen_button">Start listening</string>
    <string name="alert_sent">Help is on the way. Stay calm</string>
    <string name="confirmation_request">Hello, I am your vocal assistant. Do you have any emergency?</string>
    <string name="alert_not_sent">Okay, we wont send an emergency alert</string>

    <!-- Open web page  -->
    <string name="invalid_url">Invalid URL</string>
    <string name="no_browser_found">No browser found to open this link.</string>
    <string name="open_article_link">Tap this bubble to open the full news article</string>
...
